--- a/views/share/header.hbs
+++ b/views/share/header.hbs
@@ -1,10 +1,10 @@
 <header id="hero">
 	<div class="hero contain">
 		<div id="temporal-background">
-			<h1> Hello, <span></span></h1>
-			<h1> My name is <span></span></h1>
-			<h1> Erick <span></span></h1>
-			<a href="#" type="button" class="cta">Portfolio</a>
+			<h1>{{ data.home.title.head1 }}, <span></span></h1>
+			<h1>{{ data.home.title.head2 }} <span></span></h1>
+			<h1>{{ data.home.title.head3 }} <span></span></h1>
+			<a href="#" type="button" class="cta">{{ data.home.button }}</a>
 		</div>
 	</div>
 </header>
