--- a/views/share/scripts.hbs
+++ b/views/share/scripts.hbs
@@ -16,6 +16,7 @@
 <!-- Helpers -->
 <script src="/assets/js/react/helpers/helpers.js" type="text/babel"></script>
 <!-- Hooks -->
+<script src="/assets/js/react/hooks/useIdiom.js" type="text/babel"></script>
 <script src="/assets/js/react/hooks/useForm.js" type="text/babel"></script>
 <!-- Components SCSS -->
 <script src="/assets/js/react/elements/forms.js" type="text/babel"></script>
