--- a/public/assets/scss/section.scss
+++ b/public/assets/scss/section.scss
@@ -135,6 +135,7 @@
 		.item-desc {
 			font-family: 'Montserrat', sans-serif;
 			color: var(--secondary-gray);
+			text-align: justify;
 		}
 	}
 
@@ -171,8 +172,8 @@
 					}
 
 					.img {
-						width: 170px;
-						height: 160px;
+						width: 185px;
+						height: 185px;
 						margin: 0 auto;
 						border-radius: 50%;
 						overflow: hidden;
@@ -255,6 +256,7 @@
 				.project-desc{
 					color: var(--secondary-gray);
 					margin-bottom: 3rem;
+					text-align: justify;
 				}
 				.buttons{
 					.external-link{
@@ -299,6 +301,7 @@
 				.contact-description{
 					color: var(--secondary-gray);
 					margin-bottom: 3rem;
+					text-align: justify;
 
 				}
 				.contact-info{
@@ -436,6 +439,10 @@
 
 @media #{$tablet},
 #{$phone} {
+
+	.section-config {
+		padding: 3rem 0;
+	}
 
 	// Service
 	#services .all-items {
