--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -1,20 +1,6 @@
-{{!-- <section class="container section-first">
-	<div class="row">
-		<div class="col-12">
-			<h1>{{ namePage }}</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-12">
-			<h1>{{ content }}</h1>
-		</div>
-	</div>
-	<br />
-</section> --}}
-
 <section id="services" class="section-config">
 	<div class="contain-section">
-		<h2 class="section-heading" data-outline="Services">Services</h2>
+		<h2 class="section-heading" data-outline="{{ data.menu.skills }}">{{ data.menu.skills }}</h2>
 		<div class="all-items">
 			<div class="item">
 				<div class="icon">
@@ -23,9 +9,8 @@
 						d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 					</svg>
 				</div>
-				<h3 class="item-heading">Web Design</h3>
-				<p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptas non nisi nihil
-					saepe est aliquid corporis suscipit accusantium minus.</p>
+				<h3 class="item-heading">{{ data.skills.frontEnd.title  }}</h3>
+				<p class="item-desc">{{ data.skills.frontEnd.content  }}</p>
 			</div>
 			 <div class="item">
 				<div class="icon">
@@ -34,9 +19,8 @@
 						d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
 					</svg>
 				</div>
-				<h3 class="item-heading">UI/UX</h3>
-				<p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptas non nisi nihil
-					saepe est aliquid corporis suscipit accusantium minus.</p>
+				<h3 class="item-heading">{{ data.skills.backEnd.title  }}</h3>
+				<p class="item-desc">{{ data.skills.backEnd.content  }}</p>
 			</div>
 			<div class="item">
 				<div class="icon">
@@ -45,9 +29,8 @@
 						d="M10 21h7a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v11m0 5l4.879-4.879m0 0a3 3 0 104.243-4.242 3 3 0 00-4.243 4.242z" />
 					</svg>
 				</div>
-				<h3 class="item-heading">SEO</h3>
-				<p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptas non nisi nihil
-					saepe est aliquid corporis suscipit accusantium minus.</p>
+				<h3 class="item-heading">{{ data.skills.mobile.title  }}</h3>
+				<p class="item-desc">{{ data.skills.mobile.content  }}</p>
 			</div>
 		</div>
 	</div>
@@ -55,30 +38,27 @@
 
 <section id="about" class="section-config">
 	<div class="contain-section">
-		<h2 class="section-heading" data-outline="about">About</h2>
+		<h2 class="section-heading" data-outline="{{ data.menu.about }}">{{ data.menu.about }}</h2>
 		<div class="wrapper">
         	<div class="left">
 				<div class="card">
 					<div class="img">
-						<img src="/assets/img/img-2.png" alt="">
+						<img src="/assets/img/erick933.jpeg" alt="">
 					</div>
-					<p class="card-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione aut consectetur
+					{{!-- <p class="card-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione aut consectetur
 					itaque culpa deserunt
-					molestias asperiores a illum accusamus eum.</p>
-					<h3 class="card-name">Shaif Arfan</h3>
-					<p class="card-sub-title">CEO of My Com</p>
+					molestias asperiores a illum accusamus eum.</p> --}}
+					<h3 class="card-name">Erick Alva</h3>
+					<p class="card-sub-title">{{ data.about.own }}</p>
 				</div>
 			</div>
 			<div class="right">
-				<p class="subheading">Hi! This is AMY</p>
-				<h2 class="slogan">Freelance Web Designer</h2>
-				<p class="right-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas laboriosam quos atque
-					nisi dolorem, iure
-					alias. Veritatis dolore laudantium temporibus aperiam? Deleniti fugiat commodi, sapiente placeat similique
-					consequuntur voluptatibus necessitatibus?</p>
+				<p class="subheading">{{ data.about.subtitle }}</p>
+				<h2 class="slogan">{{ data.about.title }}</h2>
+				<p class="right-text">{{ data.about.desc }}</p>
 				<div class="buttons">
-					<a href="./resume.txt" class="primary-btn" download="">Download Resume</a>
-					<a href="./contact.html" class="primary-btn outline">Hire Me</a>
+					<a href="https://datainfo.s3-us-west-1.amazonaws.com/CV_ErickAlva.pdf" class="primary-btn" download="cv" target="_blank">{{ data.about.buttons.download }}</a>
+					<a href="#" class="primary-btn outline">{{ data.about.buttons.know }}</a>
 				</div>
        		</div>
 		</div>
@@ -88,125 +68,124 @@
 
 <section id="projects" class="section-config">
     <div class="contain-section">
-      	<h2 class="section-heading" data-outline="Projects">Projects</h2>
+      	<h2 class="section-heading" data-outline="{{ data.menu.projects }}">{{ data.menu.projects }}</h2>
 	  	<div class="all-items">
-			<div class="item">
-				<div class="left">
-					<div class="img">
-						<img src="/assets/img/project-1.jpg" alt="project">
+			{{#each data.experience}}
+				<div class="item">
+					<div class="left">
+						<div class="img">
+							<img src="{{ this.img }}" alt="project">
+						</div>
 					</div>
-				</div>
-				<div class="right">
-					<h2 class="project-title">Lorem ipsum dolor sit.</h2>
-					<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
-					<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
-					quibusdam dolor fuga quis
-					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
-					Architecto, fugit.</p>
-					<div class="buttons">
-						<a href="#" class="primary-btn">Know More</a>
-						<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
-							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-								d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-							</svg>
-						</a>
-					</div>
+					<div class="right">
+						<h2 class="project-title">{{ this.title }}</h2>
+						<h3 class="project-sub-title">{{ this.subtitle }}</h3>
+						<p class="project-desc">{{ this.desc }}</p>
+						<div class="buttons">
+							<a href="{{ this.link }}" class="primary-btn" target="_blank">{{ this.buttons.visit }}</a>
+							<a href="#" class="primary-btn outline external-link"> <span>{{ this.buttons.know }}</span>
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+									d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+								</svg>
+							</a>
+						</div>
 
-				</div>
-			</div>
-			<div class="item">
-				<div class="left">
-					<div class="img">
-						<img src="/assets/img/project-1.jpg" alt="project">
 					</div>
 				</div>
-				<div class="right">
-					<h2 class="project-title">Lorem ipsum dolor sit.</h2>
-					<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
-					<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
-					quibusdam dolor fuga quis
-					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
-					Architecto, fugit.</p>
-					<div class="buttons">
-						<a href="#" class="primary-btn">Know More</a>
-						<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
-							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-								d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-							</svg>
-						</a>
+				{{!-- <div class="item">
+					<div class="left">
+						<div class="img">
+							<img src="/assets/img/project-1.jpg" alt="project">
+						</div>
 					</div>
+					<div class="right">
+						<h2 class="project-title">Lorem ipsum dolor sit.</h2>
+						<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
+						<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
+						quibusdam dolor fuga quis
+						quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
+						Architecto, fugit.</p>
+						<div class="buttons">
+							<a href="#" class="primary-btn">Know More</a>
+							<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+									d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+								</svg>
+							</a>
+						</div>
 
-				</div>
-			</div>
-			<div class="item">
-				<div class="left">
-					<div class="img">
-						<img src="/assets/img/project-1.jpg" alt="project">
 					</div>
 				</div>
-				<div class="right">
-					<h2 class="project-title">Lorem ipsum dolor sit.</h2>
-					<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
-					<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
-					quibusdam dolor fuga quis
-					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
-					Architecto, fugit.</p>
-					<div class="buttons">
-						<a href="#" class="primary-btn">Know More</a>
-						<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
-							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-								d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-							</svg>
-						</a>
+				<div class="item">
+					<div class="left">
+						<div class="img">
+							<img src="/assets/img/project-1.jpg" alt="project">
+						</div>
 					</div>
+					<div class="right">
+						<h2 class="project-title">Lorem ipsum dolor sit.</h2>
+						<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
+						<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
+						quibusdam dolor fuga quis
+						quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
+						Architecto, fugit.</p>
+						<div class="buttons">
+							<a href="#" class="primary-btn">Know More</a>
+							<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+									d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+								</svg>
+							</a>
+						</div>
 
-				</div>
-			</div>
+					</div>
+				</div> --}}
+			{{/each }}
 		</div>
 	</div>
 </section>
 
  <section id="contact" class="section-config">
     <div class="contain-section">
-      <h2 class="section-heading" data-outline="Contact">Contact</h2>
+      <h2 class="section-heading" data-outline="{{ data.menu.contact }}">{{ data.menu.contact }}</h2>
 		<div class="wrapper">
 			<div class="left">
-				<h2 class="contact-heading">Here/Inquiry</h2>
+				<h2 class="contact-heading">{{ data.contact.title }}</h2>
 				<p class="contact-description">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus saepe reiciendis sint vero reprehenderit excepturi itaque!.
+					{{ data.contact.content }}
 				</p>
 				<div class="contact-info">
 					<ul>
 						<li>
-							<a href="#">
+							<a href="tel:{{ data.contact.list.phone }}">
 								<span class="icon">
 									<i class="fas fa-phone"></i>
 								</span>
-								<span class="text">55 51977836</span>
+								<span class="text">{{ data.contact.list.phone }}</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="mailto:{{ data.contact.list.mail }}">
 								<span class="icon">
 									<i class="fas fa-envelope"></i>
 								</span>
-								<span class="text">erickcontacto@gmail.com</span>
+								<span class="text">{{ data.contact.list.mail }}</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="https://www.google.com.mx/maps/place/Cuautitl%C3%A1n,+M%C3%A9x./@19.6685386,-99.2012028,13z/data=!3m1!4b1!4m5!3m4!1s0x85d1f57555741871:0x627993302d476fe9!8m2!3d19.6726588!4d-99.1648692" target="_blank">
 								<span class="icon">
 									<i class="fas fa-location-arrow"></i>
 								</span>
-								<span class="text">Cuatitlan, México</span>
+								<span class="text">{{ data.contact.list.address}}</span>
 							</a>
 						</li>
 					</ul>
 				</div>
-				<div class="social-info">
+				{{!-- <div class="social-info">
 					<ul>
 						<li>
 							<a href="#">GH</a>
@@ -218,7 +197,7 @@
 							<a href="#">TW</a>
 						</li>
 					</ul>
-				</div>
+				</div> --}}
 			</div>
 			<div class="right">
 				{{!-- <div class="form-wrapper">
