feat: scroll menu

--- a/templates/es/thanks.html
+++ b/templates/es/thanks.html
@@ -108,7 +108,8 @@
 																			<tbody>
 																				<tr>
 																					<td align="center" bgcolor="#005CE4" style="font-family:Helvetica,Arial,Helvetica,sans-serif;color:#111111;font-size:14px;line-height:18px;font:500 32px/18px Arial,Helvetica,sans-serif,Fira;letter-spacing:.4px;border-radius:2px">
-																						<a href="#" style="font-family:Helvetica,Arial,Helvetica,sans-serif;font-size:14px;line-height:18px;font-weight:bold;color:#005ce4;padding:20px;color:#fff;text-decoration:none;display:block" target="_blank" data-saferedirecturl="#">Visita mi página
+																						<a href="#" style="font-family:Helvetica,Arial,Helvetica,sans-serif;font-size:14px;line-height:18px;font-weight:bold;color:#005ce4;padding:20px;color:#fff;text-decoration:none;display:block" target="_blank" data-saferedirecturl="#">
+																							Visita mi página
 																						</a>
 																					</td>
 																				</tr>
@@ -117,7 +118,7 @@
 																		<br>
 																		<div style="font-size:12px;font-weight:normal">
 																			<p style="padding: 0px;margin: 0px;"><b> Echa un vistazo a mi CV!!! </b></p>
-																			<a href="#"><b>Click Aqui !!!</b></a>
+																			<a href="https://datainfo.s3-us-west-1.amazonaws.com/CV_ErickAlva.pdf"><b>Click Aqui !!!</b></a>
 																		</div>
 																		<br>
 																		<div class="text-center">
