--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -58,7 +58,7 @@
 				<p class="right-text">{{ data.about.desc }}</p>
 				<div class="buttons">
 					<a href="https://datainfo.s3-us-west-1.amazonaws.com/CV_ErickAlva.pdf" class="primary-btn" download="cv" target="_blank">{{ data.about.buttons.download }}</a>
-					<a href="#" class="primary-btn outline">{{ data.about.buttons.know }}</a>
+					<a href="#contact" class="primary-btn outline">{{ data.about.buttons.know }}</a>
 				</div>
        		</div>
 		</div>
@@ -83,7 +83,7 @@
 						<p class="project-desc">{{ this.desc }}</p>
 						<div class="buttons">
 							<a href="{{ this.link }}" class="primary-btn" target="_blank">{{ this.buttons.visit }}</a>
-							<a href="#" class="primary-btn outline external-link"> <span>{{ this.buttons.know }}</span>
+							<a href="#contact" class="primary-btn outline external-link"> <span>{{ this.buttons.know }}</span>
 								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
 									d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
