--- a/views/share/footer.hbs
+++ b/views/share/footer.hbs
@@ -4,7 +4,7 @@
 			<div class="con-1">
 				<div class="logo">
 					<a href="#">
-						<img src="/assets/img/light-logo.svg" alt="logo">
+						<img src="/assets/img/erick-logo.svg" alt="logo">
 					</a>
 				</div>
 				<p>
@@ -14,11 +14,11 @@
 			<div class="con-2">
 				<h2 class="column-heading">{{ data.footer.titles.map }}</h2>
 				<ul>
-					<li><a href="#">{{ data.menu.home }}</a></li>
-					<li><a href="#">{{ data.menu.skills }}</a></li>
-					<li><a href="#">{{ data.menu.about }}</a></li>
-					<li><a href="#">{{ data.menu.projects }}</a></li>
-					<li><a href="#">{{ data.menu.contact }}</a></li>
+					<li><a href="#hero">{{ data.menu.home }}</a></li>
+					<li><a href="#services">{{ data.menu.skills }}</a></li>
+					<li><a href="#about">{{ data.menu.about }}</a></li>
+					<li><a href="#projects">{{ data.menu.projects }}</a></li>
+					<li><a href="#contact">{{ data.menu.contact }}</a></li>
 				</ul>
 			</div>
 			<div class="con-4">
