--- a/views/share/header.hbs
+++ b/views/share/header.hbs
@@ -4,7 +4,7 @@
 			<h1>{{ data.home.title.head1 }}, <span></span></h1>
 			<h1>{{ data.home.title.head2 }} <span></span></h1>
 			<h1>{{ data.home.title.head3 }} <span></span></h1>
-			<a href="#" type="button" class="cta">{{ data.home.button }}</a>
+			<a href="#projects" type="button" class="cta">{{ data.home.button }}</a>
 		</div>
 	</div>
 </header>
