--- a/views/share/navbar.hbs
+++ b/views/share/navbar.hbs
@@ -2,18 +2,18 @@
   <section class="nav-hero contain">
     <div class="nav-bar">
       <div class="brand">
-        <a href="#">
+        <a href="#hero">
           <h1><span>E</span>rick <span>A</span>lva</h1>
         </a>
       </div>
       <div class="nav-list">
         <div class="hamburguer"><div class="bar"></div></div>
         <ul>
-          <li><a href="#" data-after="{{ data.menu.home }}">{{ data.menu.home }}</a></li>
-          <li><a href="#" data-after="{{ data.menu.skills }}">{{ data.menu.skills }}</a></li>
-          <li><a href="#" data-after="{{ data.menu.projects }}">{{ data.menu.projects }}</a></li>
-          <li><a href="#" data-after="{{ data.menu.about }}">{{ data.menu.about }}</a></li>
-          <li><a href="#" data-after="{{ data.menu.contact }}">{{ data.menu.contact }}</a></li>
+          <li><a href="#hero" data-after="{{ data.menu.home }}">{{ data.menu.home }}</a></li>
+          <li><a href="#services" data-after="{{ data.menu.skills }}">{{ data.menu.skills }}</a></li>
+          <li><a href="#about" data-after="{{ data.menu.about }}">{{ data.menu.about }}</a></li>
+          <li><a href="#projects" data-after="{{ data.menu.projects }}">{{ data.menu.projects }}</a></li>
+          <li><a href="#contact" data-after="{{ data.menu.contact }}">{{ data.menu.contact }}</a></li>
           <li><a href="/es" data-after="ES">ES</a></li>
           <li><a href="/en" data-after="EN">EN</a></li>
         </ul>
