--- a/public/assets/scss/navigation.scss
+++ b/public/assets/scss/navigation.scss
@@ -76,7 +76,7 @@
 					li:hover {
 
 						a{
-							color: crimson;
+							color: #009688;
 						}
 
 						a::after {
@@ -169,7 +169,7 @@
 		}
 
 		.brand h1 span {
-			color: crimson;
+			color: #009688;
 		}
 
 		.contain {
