--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -10,28 +10,92 @@
 					</svg>
 				</div>
 				<h3 class="item-heading">{{ data.skills.frontEnd.title  }}</h3>
+				<br />
 				<p class="item-desc">{{ data.skills.frontEnd.content  }}</p>
 			</div>
 			 <div class="item">
 				<div class="icon">
-					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					{{!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
 						d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
-					</svg>
+					</svg> --}}
+					
+					<img src="/assets/img/phone.svg" alt="">
 				</div>
 				<h3 class="item-heading">{{ data.skills.backEnd.title  }}</h3>
+				<br />
 				<p class="item-desc">{{ data.skills.backEnd.content  }}</p>
 			</div>
 			<div class="item">
 				<div class="icon">
-					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					{{!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
 						d="M10 21h7a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v11m0 5l4.879-4.879m0 0a3 3 0 104.243-4.242 3 3 0 00-4.243 4.242z" />
-					</svg>
+					</svg> --}}
+					<img src="/assets/img/back.svg" alt="">
 				</div>
 				<h3 class="item-heading">{{ data.skills.mobile.title  }}</h3>
 				<p class="item-desc">{{ data.skills.mobile.content  }}</p>
 			</div>
+		</div>
+	</div>
+</section>
+
+<section id="tech" class="section-config">
+	<div class="contain-section">
+		<h2 class="text-center">Tech Stack</h2>
+		<div class="all-items">
+				<div class="item">
+					<img src="/assets/img/logos/html-5.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="html" alt="html5">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/css.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="css" alt="css3">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/javascript.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript" alt="javascript">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/php.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="php" alt="php">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/typescript.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="typescript" alt="typescript">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/angular.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="angularjs" alt="angular">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/react.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="react" alt="react">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/sass.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="sass" alt="sass">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/wordpress.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="wordpress" alt="wordpress">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/laravel.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="laravel" alt="laravel">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/mysql.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="mysql" alt="mysql">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/redis.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="redis" alt="redis">
+				</div>
+					<div class="item">
+					<img src="/assets/img/logos/nodejs.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="nodejs" alt="nodejs">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/mongodb.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="mongodb" alt="mongodb">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/github.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="github" alt="github">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/gnu-bash.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="bashScript" alt="bash">
+				</div>
+				<div class="item">
+					<img src="/assets/img/logos/aws.svg" data-bs-toggle="tooltip" data-bs-placement="top" title="amazon web services" alt="aws">
+				</div>
 		</div>
 	</div>
 </section>
