--- a/views/share/footer.hbs
+++ b/views/share/footer.hbs
@@ -3,7 +3,7 @@
 		<footer>
 			<div class="con-1">
 				<div class="logo">
-					<a href="#">
+					<a href="#hero">
 						<img src="/assets/img/erick-logo.svg" alt="logo">
 					</a>
 				</div>
