--- a/public/assets/scss/header.scss
+++ b/public/assets/scss/header.scss
@@ -43,7 +43,7 @@
 				left: 0;
 				height: 100%;
 				width: 0;
-				background-color: crimson;
+				background-color: #009688;
 				animation: text_reveal_box 1s ease;
 				animation-delay: .3s;
 			}
@@ -66,7 +66,7 @@
 			padding: 10px 30px;
 			color:white;
 			background-color:transparent;
-			border: 2px solid crimson;
+			border: 2px solid #009688;
 			font-size: 2rem;
 			text-transform: uppercase;
 			letter-spacing: .1rem;
@@ -76,7 +76,7 @@
 
 			&:hover{
 				color: white;
-				background-color: crimson;
+				background-color: #009688;
 			}
 		}
 
@@ -120,7 +120,7 @@
 
 		@keyframes text_reveal_name{
 			100%{
-				color:crimson;
+				color:#009688;
 				// font-weight: 400;
 			}
 		}
