--- a/templates/es/contact.html
+++ b/templates/es/contact.html
@@ -16,7 +16,7 @@
 		}
 
 		section{
-			background-color: #0d6efd;
+			background-color: #303f9f;
 			color: #fff;
 			padding: 30px;
 		}
@@ -30,7 +30,7 @@
 		} */
 
 		a:hover{
-			color: #15c !important;
+			color: #009688 !important;
 		}
 
 		.text-center{
@@ -46,7 +46,7 @@
 						<table cellpadding="0" cellspacing="0" width="100%">
 							<tbody>
 								<tr>
-									<td height="150" style="background-color: #0d6efd;height: 150px;" >
+									<td height="150" style="background-color: #303f9f;height: 150px;" >
 
 									</td>
 								</tr>
@@ -57,7 +57,7 @@
 						<table align="center" cellpadding="0" cellspacing="0" style="width:100%;max-width:600px;margin:0 auto" width="600">
 							<tbody>
 								<tr>
-									<td align="center" bgcolor="#0d6efd" style="font-family:Helvetica,Arial,Helvetica,sans-serif;color:#111111;font-size:14px;line-height:18px;padding:20px 15px 24px">
+									<td align="center" bgcolor="#303f9f" style="font-family:Helvetica,Arial,Helvetica,sans-serif;color:#111111;font-size:14px;line-height:18px;padding:20px 15px 24px">
 									</td>
 								</tr>
 								<tr>
@@ -144,7 +144,7 @@
 						<table cellpadding="0" cellspacing="0" width="100%">
 							<tbody>
 								<tr>
-									<td height="150" style="background-color:#0d6efd;height: 150px;" >
+									<td height="150" style="background-color:#303f9f;height: 150px;" >
 
 									</td>
 								</tr>
