--- a/public/assets/scss/section.scss
+++ b/public/assets/scss/section.scss
@@ -193,6 +193,7 @@
 				.subheading {
 					color: var(--primary-color);
 					margin-bottom: 1rem;
+					font-weight: 700;
 				}
 				.slogan {
 					font-size: 2.5rem;
