feat: fix text english and CV

--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -121,7 +121,7 @@
 				<h2 class="slogan">{{ data.about.title }}</h2>
 				<p class="right-text">{{ data.about.desc }}</p>
 				<div class="buttons">
-					<a href="https://datainfo.s3-us-west-1.amazonaws.com/CV_ErickAlva.pdf" class="primary-btn" download="cv" target="_blank">{{ data.about.buttons.download }}</a>
+					<a href="{{ data.about.links }}" class="primary-btn" download="cv" target="_blank">{{ data.about.buttons.download }}</a>
 					<a href="#contact" class="primary-btn outline">{{ data.about.buttons.know }}</a>
 				</div>
        		</div>
