--- a/templates/en/thanks.html
+++ b/templates/en/thanks.html
@@ -108,7 +108,7 @@
 																			<tbody>
 																				<tr>
 																					<td align="center" bgcolor="#303f9f" style="font-family:Helvetica,Arial,Helvetica,sans-serif;color:#111111;font-size:14px;line-height:18px;font:500 32px/18px Arial,Helvetica,sans-serif,Fira;letter-spacing:.4px;border-radius:2px">
-																						<a class="button_page" href="https://erickalvaportfolio.herokuapp.com" style="font-family:Helvetica,Arial,Helvetica,sans-serif;font-size:14px;line-height:18px;font-weight:bold;color:#303f9f;padding:20px;color:#fff;text-decoration:none;display:block" target="_blank" data-saferedirecturl="#">
+																						<a class="button_page" href="https://erickalvaportfolio.herokuapp.com/en" style="font-family:Helvetica,Arial,Helvetica,sans-serif;font-size:14px;line-height:18px;font-weight:bold;color:#303f9f;padding:20px;color:#fff;text-decoration:none;display:block" target="_blank" data-saferedirecturl="#">
 																							Visit my page
 																						</a>
 																					</td>
@@ -118,7 +118,7 @@
 																		<br>
 																		<div style="font-size:12px;font-weight:normal">
 																			<p style="padding: 0px;margin: 0px;"><b>Take a look at me CV!!!</b></p>
-																			<a href="https://datainfo.s3-us-west-1.amazonaws.com/CV_ErickAlva.pdf"><b>Click Here !!!</b></a>
+																			<a href="https://datainfo.s3-us-west-1.amazonaws.com/Erick_Alva_En.pdf"><b>Click Here !!!</b></a>
 																		</div>
 																		<br>
 																		<div class="text-center">
