feat: update cv and add cancun today

--- a/templates/es/thanks.html
+++ b/templates/es/thanks.html
@@ -118,7 +118,7 @@
 																		<br>
 																		<div style="font-size:12px;font-weight:normal">
 																			<p style="padding: 0px;margin: 0px;"><b> Echa un vistazo a mi CV!!! </b></p>
-																			<a href="https://datainfo.s3-us-west-1.amazonaws.com/CV_ErickAlva.pdf"><b>Click Aqui !!!</b></a>
+																			<a href="https://datainfo.s3-us-west-1.amazonaws.com/Erick_Alva_ES.pdf"><b>Click Aqui !!!</b></a>
 																		</div>
 																		<br>
 																		<div class="text-center">
